# BlessedHopeLex.github.io

./: .gitignore  CNAME  README.md  _config.yml  connected.md  index.md  services-series.md  services-speaker.md  services.md  site.webmanifest  test.md  zoom.md
_drafts/: JesusCares.md  SettingThingsRight.md
_includes/: bootstrap-alert-primary.md  bootstrap-alert-warning.md  bootstrap-alert.md  google-drive-audio.html  google-drive-audio.md  sermon-starts-at.md
_layouts/: default.html  service.html  service.md
_posts/: 2020-04-19-four-essentials.md  2020-04-19-sunday-morning.md  README.md  ideas.md
_services/: 2020-04-19-four-essentials.md  2020-04-26-prophecies-of-christ-pt-1.md  2020-04-26-prophecies-of-christ-pt-2.md  2020-05-03-back-to-bethel.md  2020-05-03-body-soul-spirit.md  2020-05-10-all-my-needs.md  2020-05-10-crowns-and-rewards.md  2020-05-17-under-construction.md  2020-05-24-grace-of-garden.md  2020-05-24-questions-answers.md  2020-05-31-what-god-interested.md  2020-06-07-in-the-fire.md  2020-06-14-marks-we-bear.md  2020-06-14-your-list.md  (+392 more)
sermon-audio/: README.md  pyproject.toml
sermon-audio/sermon_audio/: upload_services_to_sa.py
sermon_audio/: Dockerfile  README.md  pyproject.toml  requirements.txt
sermon_audio/helm/: Chart.yaml  values.yaml
sermon_audio/helm/templates/: cronjob.yaml  namespace.yaml  volume.yaml
sermon_audio/sermon_audio/: google_drive.py  process_services_files.py  process_services_gsheet.py  upload_services_to_sa.py
sermon_audio/src/: google_drive.py  process_services_gsheet.py  upload_services_to_sa.py
(+1 files in other folders)
